# GGBoy-Desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Audio.hpp  EmulatorMain.hpp  InformationWindow.hpp  InformationWindow.ui  Inputhandling.hpp  MainWindow.hpp  MainWindow.ui  Video.hpp
src/: Audio.cpp  EmulatorMain.cpp  InformationWindow.cpp  Inputhandling.cpp  MainWindow.cpp  Video.cpp  main.cpp
